--- a/index.html
+++ b/index.html
@@ -98,158 +98,7 @@
             href="https://qm.qq.com/cgi-bin/qm/qr?k=EcLOPfOlyracU7D30tuxcZT5va5oMsq5&jump_from=webapi&authKey=ir7Xc3FeaPDeuBO1X7o2UEuOz7dERRQWd548kM3JYFALR7HCob5ELEH9imuWBKJ3">
             <img src="./public/icon/QQ.svg" alt="">
           </a>
-          <a target="_blank" href="mailto:fmboy520@outlook.com">
-            <img src="./public/icon/邮箱.svg" alt="">
-          </a>
-        </div>
-
-        <div class="footer-info-QR">
-
-          <div class="gzh">
-            <div class="QR">
-              <img src="./public/img/QR/肥猫BOY-公众号.jpg" alt="">
-            </div>
-            <p class="title">公众号</p>
-          </div>
-          <div class="zsm">
-            <div class="QR">
-              <img src="./public/img/QR/肥猫BOY-赞赏码.jpg" alt="">
-            </div>
-            <p class="title">微信赞赏</p>
-          </div>
-
-        </div>
-      </div>
-      <!-- 版权 -->
-      <div class="footer-copyright">
-        Copyright © 2024-2024
-        <a href="/">喵星汇</a>
-      </div>
-    </footer>
-
-  </div>
-
-
-  <!-- 回到顶部 -->
-  <link rel="stylesheet" href="./public/css/index-back-to-top.css">
-  <div class="back-to-top">
-    <img src="./public/icon/返回顶部 .svg" alt="">
-  </div>
-
-
-
-
-  <script src="./node_modules/axios@1.6.5/axios.min.js"></script>
-  <script src="./node_modules/vue@2.6.10/vue.min.js"></script>
-  <script src="./public/js/index.js"></script>
-  <script src="./public/js/index-header.js"></script>
-  <!-- 回到顶部-JS -->
-  <script src="./public/js/index-back-to-top.js"></script>
-
-</body>
-
-</html>
-<!DOCTYPE html>
-<html lang="zh">
-
-<!--
-========== ========== ==========
-  喵星汇交流群：881568371
-  站长：肥猫BOY
-  网站版本号：1.0.0
-========== ========== ==========
--->
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>喵星汇-导航 | 资源分享站</title>
-  <link rel="stylesheet" href="./public/css/index.css">
-  <link rel="stylesheet" href="./public/css/index-header.css">
-  <link rel="stylesheet" href="./public/css/index-main.css">
-  <link rel="stylesheet" href="./public/css/index-footer.css">
-  <link rel="stylesheet" href="./public/css/index-body-background.css">
-</head>
-
-<body>
-  <div id="app" class="gradient-background">
-
-    <header class="header">
-      <div class="header-nav">
-        <a href="https://gitee.com/FMBOY" target="_blank">Gitee</a>
-        <a href="https://github.com/FMBOY520" target="_blank">GitHub</a>
-      </div>
-    </header>
-
-    <main class="main">
-
-      <!-- 日期 -->
-      <div class="main-date">
-        <h2 class="date-1">{{ date_1 }}</h2>
-        <h4 class="date-2">{{ date_2 }}</h4>
-        <h6 class="date-3">{{ date_3 }}</h6>
-      </div>
-
-      <!-- 搜索 -->
-      <div class="main-search">
-        <div class="search_frame">
-          <form :action="search_url" target="_blank">
-            <input class="ss1" type="text" :name="search_name" :placeholder="search_placeholder" v-model="search_value">
-            <button class="ss2" type="submit" @click="searchBtn">搜索</button>
-          </form>
-        </div>
-        <div class="search_nav" @click="searchListBtn">
-          <a href="javascript:;" class="list-btn-on">百度</a>
-          <a href="javascript:;">Bing</a>
-          <a href="javascript:;">哔哩哔哩</a>
-        </div>
-      </div>
-
-      <!-- 模块内容 -->
-      <div class="main-module">
-        <div class="main-module-box" v-for="item in module_content">
-          <h2 class="title">{{ item.title }}</h2>
-          <div class="content">
-            <div class="box" v-for="i in item.content">
-              <a class="mod" target="_blank" :href="i.url" :title="i.name">
-                <div class="logo">
-                  <div class="img">
-                    <img :src="i.logo" alt="">
-                  </div>
-                </div>
-                <p class="name">{{ i.name }}</p>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-    </main>
-
-    <footer class="footer">
-      <!-- 信息 -->
-      <div class="footer-info">
-        <div class="footer-info-content">
-          <div class="title">
-            <div class="logo">
-              <img src="./public/img/logo/logo.png" alt="">
-            </div>
-            <div class="name">
-              <h2>喵星汇</h2>
-              <p>mxh.fmboy.com</p>
-            </div>
-          </div>
-          <div class="content">
-            欢迎来到喵星汇，此网站用于分享一些开发者、娱乐、影视等网站，也会分享一些开源项目。
-          </div>
-        </div>
-
-        <div class="footer-info-link">
-          <a target="_blank"
-            href="https://qm.qq.com/cgi-bin/qm/qr?k=EcLOPfOlyracU7D30tuxcZT5va5oMsq5&jump_from=webapi&authKey=ir7Xc3FeaPDeuBO1X7o2UEuOz7dERRQWd548kM3JYFALR7HCob5ELEH9imuWBKJ3">
-            <img src="./public/icon/QQ.svg" alt="">
-          </a>
-          <a target="_blank" href="mailto:fmboy520@outlook.com">
+          <a target="_blank" href="mailto:fmboy520@qq.com">
             <img src="./public/icon/邮箱.svg" alt="">
           </a>
         </div>
