--- a/404.html
+++ b/404.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>. . . 资源跑丢了 . . .</title>
-  <link rel="icon" href="/public/img/logo/smile_50x50.ico">
+  <title>喵星汇-导航 | 404</title>
   <style>
     * {
       margin: 0;
@@ -21,10 +20,20 @@
     }
 
     .box {
+      padding: 5% 15%;
       text-align: center;
       background-color: #f0f0f0;
-      padding: 5% 15%;
       border-radius: 10px;
+    }
+
+    .box img {
+      margin: 10px;
+      width: 40px;
+    }
+
+    .box h2 {
+      color: #555;
+      font-size: 20px;
     }
   </style>
 </head>
