--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <div class="header-nav">
         <a href="https://gitee.com/FMBOY" target="_blank">Gitee</a>
         <a href="https://github.com/FMBOY520" target="_blank">GitHub</a>
+        <a href="https://blog.csdn.net/m0_74175846" target="_blank">CSDN</a>
       </div>
     </header>
 
@@ -51,6 +52,11 @@
           <a href="javascript:;" class="list-btn-on">百度</a>
           <a href="javascript:;">Bing</a>
           <a href="javascript:;">哔哩哔哩</a>
+          <a href="javascript:;">CSDN</a>
+          <!-- <a href="javascript:;" v-for="item in search_list"
+            :class="{'list-btn-on':search_placeholder==item.placeholder}">
+            {{ item.title }}
+          </a> -->
         </div>
       </div>
 
