修复了一些已知问题

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <a href="https://gitee.com/FMBOY" target="_blank">Gitee</a>
         <a href="https://github.com/FMBOY520" target="_blank">GitHub</a>
         <a href="https://blog.csdn.net/m0_74175846" target="_blank">CSDN</a>
+        <a href="https://mxh.fmboy.com/web/AI" target="_blank">AI</a>
       </div>
     </header>
 
@@ -105,22 +106,18 @@
             <img src="./public/icon/QQ.svg" alt="">
           </a>
           <a target="_blank" href="mailto:fmboy520@qq.com">
-            <img src="./public/icon/邮箱.svg" alt="">
+            <img src="./public/icon/Email.svg" alt="">
           </a>
         </div>
 
         <div class="footer-info-QR">
 
           <div class="gzh">
-            <div class="QR">
-              <img src="./public/img/QR/肥猫BOY-公众号.jpg" alt="">
-            </div>
+            <div class="QR"> <img src="./public/img/QR/FMBOY-GongZhongHao.jpg" alt=""> </div>
             <p class="title">公众号</p>
           </div>
           <div class="zsm">
-            <div class="QR">
-              <img src="./public/img/QR/肥猫BOY-赞赏码.jpg" alt="">
-            </div>
+            <div class="QR"> <img src="./public/img/QR/FMBOY-ZanShangMa.jpg" alt=""> </div>
             <p class="title">微信赞赏</p>
           </div>
 
@@ -136,21 +133,16 @@
   </div>
 
 
-  <!-- 回到顶部 -->
-  <link rel="stylesheet" href="./public/css/index-back-to-top.css">
-  <div class="back-to-top">
-    <img src="./public/icon/返回顶部 .svg" alt="">
-  </div>
-
-
-
-
   <script src="./node_modules/axios@1.6.5/axios.min.js"></script>
   <script src="./node_modules/vue@2.6.10/vue.min.js"></script>
   <script src="./public/js/index.js"></script>
   <script src="./public/js/index-header.js"></script>
-  <!-- 回到顶部-JS -->
+
+  <!-- 回到顶部 -->
+  <link rel="stylesheet" href="./public/css/index-back-to-top.css">
+  <div class="back-to-top"> <img src="./public/icon/BackToTop.svg" alt=""> </div>
   <script src="./public/js/index-back-to-top.js"></script>
+
 
 </body>
 
