使用ES6模块化规范

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 ========== ========== ==========
   喵星汇交流群：881568371
   站长：肥猫BOY
-  网站版本号：1.0.0
+  网站版本号：1.0.1
 ========== ========== ==========
 -->
 
@@ -14,10 +14,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>喵星汇-导航 | 资源分享站</title>
   <link rel="stylesheet" href="./public/css/index.css">
-  <link rel="stylesheet" href="./public/css/index-header.css">
-  <link rel="stylesheet" href="./public/css/index-main.css">
-  <link rel="stylesheet" href="./public/css/index-footer.css">
-  <link rel="stylesheet" href="./public/css/index-body-background.css">
 </head>
 
 <body>
@@ -133,13 +129,10 @@
   </div>
 
 
-  <script src="./node_modules/axios@1.6.5/axios.min.js"></script>
-  <script src="./node_modules/vue@2.6.10/vue.min.js"></script>
-  <script src="./public/js/index.js"></script>
-  <script src="./public/js/index-header.js"></script>
+  <script type="module" src="./public/js/index.js"></script>
+  <script type="module" src="./public/js/index-header.js"></script>
 
   <!-- 回到顶部 -->
-  <link rel="stylesheet" href="./public/css/index-back-to-top.css">
   <div class="back-to-top"> <img src="./public/icon/BackToTop.svg" alt=""> </div>
   <script src="./public/js/index-back-to-top.js"></script>
 
